[package]
name = "encryption_export"
version = "0.0.1"
edition = "2021"
publish = false

[features]
default = ["cloud-aws", "cloud-gcp", "cloud-azure"]
cloud-aws = ["aws"]
cloud-gcp = []
cloud-azure = ["azure"]

[dependencies]
async-trait = "0.1"
aws = { workspace = true, optional = true }
azure = { workspace = true, optional = true }
cloud = { workspace = true }
derive_more = "0.99.3"
collections = { workspace = true }
encryption = { workspace = true }
error_code = { workspace = true }
file_system = { workspace = true }
kvproto = { workspace = true }
openssl = "0.10"
protobuf = { version = "2.8", features = ["bytes"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
slog = { workspace = true }
# better to not use slog-global, but pass in the logger
slog-global = { workspace = true }
tikv_util = { workspace = true }

[dev-dependencies]
rust-ini = "0.14.0"
structopt = "0.3"
